feat : 페이지 라우팅 설정

--- a/index.html
+++ b/index.html
@@ -4,17 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Bubble Pop Game</title>
-
-    <link rel="stylesheet" type="text/css" href="style.css" />
-
+    <title>Mini Game</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
   </head>
 
   <body>
-    <button onclick="startGame()">Start</button>
-
-    <script src="bubble.js"></script>
+    <div>미니게임</div>
+    <a href="./bubble/bubble.html">Bubble</a>
+    <a href="./lotto/lotto.html">Lotto</a>
   </body>
 </html>
