--- a/bubble/bubbleMain.html
+++ b/bubble/bubbleMain.html
@@ -13,8 +13,6 @@
   </head>
 
   <body>
-    <!-- <button onclick="startGame()">Start</button> -->
-
-    <script src="../bubble/bubble.js"></script>
+    <script src="../bubble/bubbleMain.js"></script>
   </body>
 </html>
