feat : 사이즈 조정 및 테스트 페이지 추가

--- a/test.html
+++ b/test.html
@@ -11,9 +11,7 @@
   </head>
 
   <body>
-    <div>미니게임</div>
-    <a href="./bubble/bubbleMain.html">Bubble</a>
-    <a href="./lotto/lotto.html">Lotto</a>
-    <a href="/test.html">Test</a>
+    <div>테스트 화면입니다.</div>
+    <script src="/test.js"></script>
   </body>
 </html>
