--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <div>미니게임</div>
     <a href="./bubble/bubbleMain.html">Bubble</a>
     <a href="./lotto/lotto.html">Lotto</a>
-    <a href="/test.html">Test</a>
+    <a href="/testPage.html">Test</a>
   </body>
 </html>
