메인 이미지 설정

--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
   </head>
 
   <body>
-    <div>미니게임</div>
-    <a href="./bubble/bubbleMain.html">Bubble</a>
-    <a href="./lotto/lotto.html">Lotto</a>
-    <a href="/mockTest.html">Test</a>
+    <div class="main">
+      <div class="title">GAME WATCH</div>
+      <div class="menu-item">
+        <a href="./bubble/bubbleMain.html">Bubble</a>
+      </div>
+      <div class="menu-item">
+        <a href="./lotto/lotto.html">Lotto</a>
+      </div>
+    </div>
   </body>
 </html>
