test : 가로모드 테스트

--- a/bubble/bubbleMain.html
+++ b/bubble/bubbleMain.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Bubble Pop Game</title>
+    <title>Bubble Bubble</title>
 
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css" />
 
