--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
     <div class="main">
       <div class="title">GAME WATCH</div>
       <div class="menu-item">
-        <a href="./bubble/bubbleMain.html">Bubble</a>
+        <a href="./bubble/bubbleMain.html">Bubble Bubble</a>
       </div>
       <div class="menu-item">
         <a href="./lotto/lotto.html">Lotto</a>
+      </div>
+      <div class="menu-item">
+        <a href="./runrun/runGame.js">Run Run</a>
       </div>
     </div>
   </body>
