--- a/runrun/runGame.html
+++ b/runrun/runGame.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Bubble Bubble</title>
+    <title>Run Run</title>
 
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css" />
 
@@ -15,6 +15,6 @@
   <body>
     <!-- <button onclick="startGame()">Start</button> -->
 
-    <script src="../bubble/bubble.js"></script>
+    <script src="../runrun/runGame.js"></script>
   </body>
 </html>
