--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="./lotto/lotto.html">Lotto</a>
       </div>
       <div class="menu-item">
-        <a href="./runrun/runGame.js">Run Run</a>
+        <a href="./runrun/runMain.html">Run Run</a>
       </div>
     </div>
   </body>
