test : 가로모드 설정

--- a/runrun/runGame.html
+++ b/runrun/runGame.html
@@ -12,7 +12,7 @@
     <script src="../libraries/p5.sound.min.js"></script>
   </head>
 
-  <body>
+  <body class="portrait">
     <!-- <button onclick="startGame()">Start</button> -->
 
     <script src="../runrun/runGame.js"></script>
