test : 드래그 수정

--- a/runrun/runGame.html
+++ b/runrun/runGame.html
@@ -12,9 +12,8 @@
     <script src="../libraries/p5.sound.min.js"></script>
   </head>
 
-  <body class="portrait">
+  <body>
     <!-- <button onclick="startGame()">Start</button> -->
-
     <script src="../runrun/runGame.js"></script>
   </body>
 </html>
