이미지 업로드

--- a/runrun/runMain.html
+++ b/runrun/runMain.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=yes"
     />
 
-    <title>Run Run Game</title>
+    <title>Run Run</title>
 
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css" />
 
