로또 페이지 설정

--- a/lotto/lottoInput.html
+++ b/lotto/lottoInput.html
@@ -10,7 +10,13 @@
   </head>
 
   <body>
-    <div>L N G</div>
-    <a href="lottoInput.html">START</a>
+    <div>생년월일</div>
+    <input
+      type="number"
+      autofocus
+      min="0"
+      maxlength="8"
+      placeholder="예) 20230101"
+    />
   </body>
 </html>
