파이어 베이스 설정

--- a/bubble/bubbleMain.html
+++ b/bubble/bubbleMain.html
@@ -7,9 +7,12 @@
     <title>Bubble Bubble</title>
 
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css" />
-
+    <!-- p5.js -->
     <script src="../libraries/p5.min.js"></script>
     <script src="../libraries/p5.sound.min.js"></script>
+    <!-- Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-database.js"></script>
   </head>
 
   <body>
