--- a/bubble/bubbleMain.html
+++ b/bubble/bubbleMain.html
@@ -13,6 +13,7 @@
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-firestore.js"></script>
   </head>
 
   <body>
