--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
       <div class="menu-item">
         <a href="./runrun/runMain.html">Run Run</a>
       </div>
+      <div class="menu-item">
+        <a href="./chuseok/csMain.html">CHUSEOK</a>
+      </div>
     </div>
   </body>
 </html>
