송편이미지 추가

--- a/chuseok/csGame.html
+++ b/chuseok/csGame.html
@@ -15,6 +15,6 @@
   <body>
     <!-- <button onclick="startGame()">Start</button> -->
 
-    <script src="../bubble/bubble.js"></script>
+    <script src="./csGame.js"></script>
   </body>
 </html>
