--- a/chuseok/csGame.html
+++ b/chuseok/csGame.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Bubble Bubble</title>
+    <title>추석이벤트</title>
 
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css" />
 
