추석 메인 설정

--- a/chuseok/csMain.html
+++ b/chuseok/csMain.html
@@ -18,6 +18,6 @@
   </head>
 
   <body>
-    <script src="../bubble/bubbleMain.js"></script>
+    <script src="../chuseok/csMain.js"></script>
   </body>
 </html>
