add : vanilaJS에서 firebase 사용한 CRUD 테스트 화면 구현

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       <div class="menu-item">
         <a href="./chuseok/csMain.html">CHUSEOK</a>
       </div>
+      <div class="menu-item">
+        <a href="./test/index.html">firebase test</a>
+      </div>
     </div>
   </body>
 </html>
