--- a/chuseok/csMain.html
+++ b/chuseok/csMain.html
@@ -15,9 +15,15 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-storage.js"></script>
+    <!-- vConsole -->
+    <script src="https://cdn.jsdelivr.net/npm/vconsole@3.9.0/dist/vconsole.min.js"></script>
   </head>
 
   <body>
     <script src="../chuseok/csMain.js"></script>
+    <script>
+      // vConsole 인스턴스 생성
+      const vConsole = new VConsole();
+    </script>
   </body>
 </html>
