메인 화면 p5.js 제거

--- a/chuseok/csMain.html
+++ b/chuseok/csMain.html
@@ -8,8 +8,6 @@
 
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css" />
     <!-- p5.js -->
-    <script src="../libraries/p5.min.js"></script>
-    <script src="../libraries/p5.sound.min.js"></script>
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-auth.js"></script>
@@ -20,7 +18,10 @@
   </head>
 
   <body>
-    <script src="../chuseok/csMain.js"></script>
+    <div class="menu-item">
+      <a href="./csGame.html">GAME START</a>
+    </div>
+    <script src="./csMain.js"></script>
     <script>
       // vConsole 인스턴스 생성
       const vConsole = new VConsole();
