add : event id가 쿼리 스트링으로 들어간 버전 추가

--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
         <a href="./chuseok/csMain.html">CHUSEOK</a>
       </div>
       <div class="menu-item">
-        <a href="./test/index.html">firebase test</a>
+        <a href="./chuseok/csMain.html?event_id=21">CHUSEOK + event id</a>
       </div>
+      <!-- <div class="menu-item">
+        <a href="./test/index.html">firebase test</a>
+      </div> -->
     </div>
   </body>
 </html>
