--- a/chuseok/csGame.html
+++ b/chuseok/csGame.html
@@ -10,11 +10,17 @@
 
     <script src="../libraries/p5.min.js"></script>
     <script src="../libraries/p5.sound.min.js"></script>
+    <!-- vConsole -->
+    <script src="https://cdn.jsdelivr.net/npm/vconsole@3.9.0/dist/vconsole.min.js"></script>
   </head>
 
   <body>
     <!-- <button onclick="startGame()">Start</button> -->
 
     <script src="./csGame.js"></script>
+    <script>
+      // vConsole 인스턴스 생성
+      const vConsole = new VConsole();
+    </script>
   </body>
 </html>
