--- a/chuseok/csGame.html
+++ b/chuseok/csGame.html
@@ -22,6 +22,6 @@
       // vConsole 인스턴스 생성
       const vConsole = new VConsole();
     </script>
-    <a href="https://paywatch-stage-webapp.paywatchglobal.com/event/22">이동</a>
+    <!-- <a href="https://paywatch-stage-webapp.paywatchglobal.com/event/22">이동</a> -->
   </body>
 </html>
