파이어베이스 테스트

--- a/chuseok/csGame.html
+++ b/chuseok/csGame.html
@@ -12,12 +12,18 @@
     <script src="../libraries/p5.sound.min.js"></script>
     <!-- vConsole -->
     <script src="https://cdn.jsdelivr.net/npm/vconsole@3.9.0/dist/vconsole.min.js"></script>
+
+    <!-- Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-firestore-compat.js"></script>
   </head>
 
   <body>
     <!-- <button onclick="startGame()">Start</button> -->
 
     <script src="./csGame.js"></script>
+    <!-- <script type="module" src="./csGame.js"></script> -->
+
     <script>
       // vConsole 인스턴스 생성
       const vConsole = new VConsole();
