--- a/chuseok/csGame.html
+++ b/chuseok/csGame.html
@@ -19,7 +19,7 @@
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-MG9WH8QQZB"
+      src="https://www.googletagmanager.com/gtag/js?id=G-VD419G6BZ2"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -28,7 +28,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-MG9WH8QQZB");
+      gtag("config", "G-VD419G6BZ2");
     </script>
   </head>
 
