--- a/chuseok/csMain.html
+++ b/chuseok/csMain.html
@@ -4,27 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>추석이벤트</title>
+    <title>송편</title>
 
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css" />
-    <!-- p5.js -->
-    <!-- Firebase -->
-    <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-storage.js"></script>
-    <!-- vConsole -->
-    <script src="https://cdn.jsdelivr.net/npm/vconsole@3.9.0/dist/vconsole.min.js"></script>
+    <script src="../libraries/p5.min.js"></script>
+    <script src="../libraries/p5.sound.min.js"></script>
   </head>
 
   <body>
-    <div class="menu-item">
-      <a href="./csGame.html">GAME START</a>
-    </div>
     <script src="./csMain.js"></script>
-    <script>
-      // vConsole 인스턴스 생성
-      const vConsole = new VConsole();
-    </script>
   </body>
 </html>
